--- a/src/Components/HomPageComp/Css Files/EditorialUrban.css
+++ b/src/Components/HomPageComp/Css Files/EditorialUrban.css
@@ -30,6 +30,7 @@
   font-size: 40px;
   color: black;
   font-weight: 700;
+  margin-top: -5%;
   font-family: "Merriweather";
 }
 .Urban-text-left {
