--- a/src/Components/HomPageComp/Css Files/BookReview.css
+++ b/src/Components/HomPageComp/Css Files/BookReview.css
@@ -58,3 +58,41 @@
   font-weight: 300;
   margin-top: -5px;
 }
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .BookReview-image {
+    width: 250px; /* Adjust size for smaller screens */
+    height: 350px; /* Adjust height accordingly */
+  }
+
+  .BookReview-text {
+    font-size: 28px; /* Smaller font size for text */
+  }
+
+  .BookReview-date {
+    font-size: 14px; /* Adjust date font size */
+  }
+}
+
+@media (max-width: 480px) {
+  .BookReview-image {
+    width: 200px; /* Further adjust size for mobile */
+    height: 300px; /* Adjust height accordingly */
+    margin-top: 1%;
+  }
+
+  .BookReview-text {
+    margin-top: 1%;
+    font-size: 20px; /* Further decrease font size */
+  }
+
+  .BookReview-date {
+    font-size: 12px; /* Smaller font size for date */
+  }
+
+  .BookReview-Container {
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center align items */
+  }
+}
